2007-09-18  Bastien Nocera  <hadess@hadess.net>

	* src/menu.c: (about_activated): Fix warnings when running with
	GTK+ < 2.11.0 (Closes: #475836)

2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* MAINTAINERS: Added

2007-08-19  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: the Nokia 6300 should use the 6510 driver,
	thanks to Michael Monreal

2007-08-19  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phones.xml: Add the Nokia 6300 to the list (Closes: #468244)

============ Version 0.10

2007-08-19  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: release 0.10

	* Makefile.am:
	* src/Makefile.am:
	* ui/Makefile.am: distcheck fixes

2007-08-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Require gnome-icon-theme 2.19.1 so we have a phone
	icon available (Closes: #461968)

2007-07-25  Richard Hughes  <richard@hughsie.com>

	* src/phonemgr-object.c: (phonemgr_object_coldplug):
	Unconditionally do NumberBatteriesChanged at coldplug to avoid a
	totally non-interesting race condition.

2007-07-25  Richard Hughes  <richard@hughsie.com>

	* src/phonemgr-object.c: (phonemgr_object_coldplug):
	* src/phonemgr-object.h:
	Fix the coldplug method so it can work. You _have_ to return TRUE,
	or return a GError.

2007-07-25  Richard Hughes  <richard@hughsie.com>

	* src/phonemgr-object.c: (phonemgr_object_register),
	(phonemgr_object_init):
	Actually register a bus name so other session dbus clients can
	connect to a named service.

2007-07-24  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Update gnokii requirements now that 0.6.18
	has been released

2007-07-24  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/icon.c: (tray_icon_init):
	* src/main.c:
	* ui/icons/16x16/status/Makefile.am:
	* ui/icons/22x22/status/Makefile.am:
	* ui/icons/24x24/status/Makefile.am:
	Update the icon loading to follow the best practices at
	http://live.gnome.org/ThemableAppSpecificIcons